Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8209126
ZGC: ZMarkStackAllocator::is_initialized() never called
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P4
Fix Version/s:
12
Affects Version/s:
12
Component/s:
hotspot
Labels:
zgc
Subcomponent:
gc
Resolved In Build:
b07
Description
Failure to reserve the address space for the mark stacks doesn't terminate the VM during initialization. The reason is that ZHeap::is_initialized() doesn't call ZMarkStackAllocator::is_initialized(), which it should.
Attachments
Activity
People
Assignee:
Per Liden (Inactive)
Reporter:
Per Liden (Inactive)
Votes
:
0
Vote for this issue
Watchers:
3
Start watching this issue
Dates
Created:
2018-08-08 04:53
Updated:
2022-09-23 01:53
Resolved:
2018-08-09 02:33