8209126: ZGC: ZMarkStackAllocator::is_initialized() never called

Reviewed-by: eosterlund, tschatzl