src/hotspot/share/gc/z/zMark.hpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -101,6 +101,8 @@ private:
 
 public:
   ZMark(ZWorkers* workers, ZPageTable* pagetable);
+
+  bool is_initialized() const;
 
   template <bool finalizable, bool publish> void mark_object(uintptr_t addr);
 
